--- a/ui/dirdiffform.ui
+++ b/ui/dirdiffform.ui
@@ -30,6 +30,9 @@
        <property name="text">
         <string>Open Left Dir</string>
        </property>
+       <property name="icon">
+        <iconset theme="folder"/>
+       </property>
       </widget>
      </item>
      <item>
@@ -49,6 +52,9 @@
        </property>
        <property name="text">
         <string>Open Right Dir</string>
+       </property>
+       <property name="icon">
+        <iconset theme="folder"/>
        </property>
       </widget>
      </item>
@@ -101,6 +107,9 @@
        <property name="text">
         <string>Save as to right</string>
        </property>
+       <property name="icon">
+        <iconset theme="document-save-as"/>
+       </property>
       </widget>
      </item>
      <item row="1" column="2">
@@ -108,12 +117,18 @@
        <property name="text">
         <string>Save as to left</string>
        </property>
+       <property name="icon">
+        <iconset theme="document-save-as"/>
+       </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QPushButton" name="refresh">
        <property name="text">
         <string>Refresh</string>
+       </property>
+       <property name="icon">
+        <iconset theme="view-refresh"/>
        </property>
       </widget>
      </item>
@@ -134,6 +149,26 @@
         </widget>
        </item>
       </layout>
+     </item>
+     <item row="2" column="0">
+      <widget class="QPushButton" name="openleft">
+       <property name="text">
+        <string>Explore Left</string>
+       </property>
+       <property name="icon">
+        <iconset theme="system-file-manager"/>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <widget class="QPushButton" name="openright">
+       <property name="text">
+        <string>Explore Right</string>
+       </property>
+       <property name="icon">
+        <iconset theme="system-file-manager"/>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
