--- a/ui/settingsdialog.ui
+++ b/ui/settingsdialog.ui
@@ -16,6 +16,9 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QFormLayout" name="formLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::ExpandingFieldsGrow</enum>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="diffToolLabel">
        <property name="text">
@@ -25,16 +28,6 @@
      </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="diffToolLineEdit"/>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="fileManagerLabel">
-       <property name="text">
-        <string>File Manager</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="fileManagerLineEdit"/>
      </item>
     </layout>
    </item>
