--- a/ui/settingsdialog.ui
+++ b/ui/settingsdialog.ui
@@ -19,15 +19,25 @@
      <property name="fieldGrowthPolicy">
       <enum>QFormLayout::ExpandingFieldsGrow</enum>
      </property>
-     <item row="0" column="0">
+     <item row="1" column="0">
       <widget class="QLabel" name="diffToolLabel">
        <property name="text">
         <string>Diff Tool</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
+     <item row="1" column="1">
       <widget class="QLineEdit" name="diffToolLineEdit"/>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="editorLabel">
+       <property name="text">
+        <string>Editor</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="editorLineEdit"/>
      </item>
     </layout>
    </item>
