--- a/ui/dirdiffform.ui
+++ b/ui/dirdiffform.ui
@@ -191,9 +191,12 @@
      <item row="2" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QLabel" name="label_2">
+        <widget class="QCheckBox" name="depthlimit">
          <property name="text">
-          <string>Depth</string>
+          <string>Limit depth</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
