--- a/ui/settingsdialog.ui
+++ b/ui/settingsdialog.ui
@@ -160,6 +160,13 @@
          </widget>
         </item>
         <item>
+         <widget class="QPushButton" name="pushButton">
+          <property name="text">
+           <string>Edit</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QPushButton" name="remove_match">
           <property name="text">
            <string>Remove</string>
